name:                stockfighter-api
version:             0.1.0.0
synopsis:            API bindings for Stockfighter, the first game in the starfighters.io series
description:         Please see README.md
homepage:            http://github.com/alexander-hill/stockfighter-api#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Hill
maintainer:          alexander.d.hill.89@gmail.com
copyright:           2015 Alex Hill
category:            api
build-type:          Simple
cabal-version:       >=1.10

Library
  default-language:   Haskell2010
  hs-source-dirs:     src
  build-depends:      base >= 4.7 && < 5,
                      text >= 1.2 && < 1.3,
                      transformers >= 0.4 && < 0.5,
                      aeson >= 0.8 && < 0.9,
                      wreq >= 0.4 && < 0.5,
                      lens >= 4.12 && < 5,
                      vector >= 0.10 && < 0.11,
                      time >= 1.5 && < 1.6,
                      bytestring >= 0.10 && < 0.11,
                      unordered-containers >= 0.2 && < 0.3,
                      scientific >= 0.3 && < 0.4,
                      websockets >= 0.9 && < 0.10,
                      wuss >= 1.0 && < 2.0,
                      hsyslog

  ghc-options:        -Wall -fPIC

  exposed-modules:    Stockfighter,
                      Stockfighter.Guts,
                      Stockfighter.Api.Heartbeat,
                      Stockfighter.Venue.Heartbeat,
                      Stockfighter.Venue.Stocks,
                      Stockfighter.Stock.OrderBook,
                      Stockfighter.Stock.Quote,
                      Stockfighter.Stock.Order,
                      Stockfighter.Stock.Order.Status
                      Stockfighter.Stock.Order.Cancel,
                      Stockfighter.Streaming.Quotes,
                      Stockfighter.Streaming.Executions
